# ptb

./: .autoenv.zsh  .gitignore  CHANGELOG.md  README.md  setup.cfg  setup.py
src/ptb/: figserv.py  graphics.py  mail.py  mathe.py  mk.py  mkp.py  pe.py  plots.py  py.sh  text.py  tools.py
template/: .gitignore  setup.cfg
template/.ipython_profile/startup/: 50-startup.py  90-info.py
template/src/python/: main.py
template/tests/: __init__.py
