[metadata]
name = ptb
version = 1.0.2
author = Balint Takacs
author_email = takbal@gmail.com
description = python toolbox
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/takbal/ptb
classifiers =
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
python_requires = >=3.9
install_requires = 
    tqdm
    numpy
    lz4
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    pyqtwebengine
develop_requires =
testing_require =
package_dir= =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test = 
    pytest
    coverage

[gitlab]
group = 
