[metadata]
name =
version = 0.0.0
author = John Doe
author_email = jd@gmail.com
description = description here
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = 

[options]
python_requires = >=3.9
install_requires =
develop_requires =
testing_require =
package_dir= =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test = 
    pytest
    coverage

[gitlab]
# place here your string for 'glab repo create --group', like company/subspace/subspace/
group = 
